--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=cit260.team4.battleship.MainGUI
+main.class=cit260.team4.battleship.CIT260Team4Battleship
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
